# toydb

./: .gdb_history  .rust-analyzer.json  Cargo.toml
crates/aart/: .rust-analyzer.json  Cargo.toml
crates/aart/benches/: vart_bench.rs
crates/aart/src/: lib.rs  prim.rs
crates/aart/src/key/: inline_buffer.rs  mod.rs  pod.rs
crates/aart/src/raw/: mod.rs  root.rs  test.rs
crates/aart/src/raw/nodes/: leaf.rs  mod.rs  node16.rs  node256.rs  node4.rs  node48.rs  ptr.rs
crates/art/: Cargo.toml
crates/art/src/: header.rs  header_old.rs  iter.rs  lib.rs  lib_old.rs  mac.rs  raw.rs  test.rs
crates/art/src/key/: inline_buffer.rs  mod.rs  pod.rs
crates/art/src/nodes/: boxed_node.rs  header.rs  leaf.rs  mod.rs  node16.rs  node256.rs  node4.rs  node48.rs  owned_node.rs  ptr.rs
crates/art/src/nodes_old/: mod.rs  node4.rs
crates/art/src/raw/: mod.rs  ptr.rs
crates/art/src/raw/nodes/: header.rs  leaf.rs  mod.rs  node16.rs  node256.rs  node4.rs  node48.rs
src/: main.rs
